# opencvStudy

./: CMakeLists.txt  CMakePresets.json  README.md  fluentstyle.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  opencvhelper.cpp  opencvhelper.h  vcpkg.json
.github/workflows/: build.yml
